--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ header > p{
     font-family: var(--fonte-padrao);
     max-width: 500px;
     margin: auto;
+    padding-bottom: 50px;
 
     text-shadow: 3px 3px 3px black;
 
